[package]
name = "tokio_kcp"
version = "0.9.3"
authors = ["Matrix <113445886@qq.com>", "Y. T. Chung <zonyitoo@gmail.com>"]
description = "A kcp implementation for tokio"
license = "MIT"
readme = "README.md"
keywords = ["kcp", "udp", "reliable", "tokio"]
documentation = "https://docs.rs/tokio_kcp"
repository = "https://github.com/Matrix-Zhang/tokio_kcp"
edition = "2021"

[dependencies]
bytes = "1.1"
futures = "0.3.26"
kcp = "0.5.0"
log = "0.4"
#tokio = { version = "1.11", features = ["net", "sync", "rt", "macros", "time"] }
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
byte_string = "1"
rand = "0.8"
spin = "0.9"
async-notify = "0.2.0"
async-trait = "0.1.64"

[dev-dependencies]
env_logger = "0.9"
#tokio = { version = "1.11", features = ["net", "sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "io-std"]}
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
futures = "0.3.26"
async-notify = "0.2.0"
async-trait = "0.1.64"

[[example]]
name = "server_test"
path = "examples/server.rs"